# baselines-allyouneed

./: LICENSE  README.md  main.py  pyproject.toml
assets/: patch_alignment.csv
scripts/synthetic_data/: create_synth_dataset.py  draw_graphs_hest.py  draw_sample.py
src/uninformed/configs/: synthetic_graphs.py
src/uninformed/dataops/: landscapes.py  synthetic_graphs.py
src/uninformed/utils/: graph_drawing.py  misc.py
